--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="app/styles/styles.css">
 </head>
+
 <body ng-app="app">
     <div class="d-flex">
         <!-- Sidebar -->
@@ -32,5 +34,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
     <script src="app.js"></script>
+    <script src="app/services/ProductService.js"></script>
+    <script src="app/controllers/ProductListController.js"></script>
+    <script src="app/controllers/ProductCreateController.js"></script>
 </body>
+
 </html>
