--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,9 @@
                 <li>
                     <a href="index.html#!/products/create">Adicionar Produto</a>
                 </li>
+                <li>
+                    <a href="index.html#!/products/historico">Histórico de Ações</a>
+                </li>
             </ul>
         </div>
         <!-- Page Content -->
@@ -36,7 +39,9 @@
     <script src="app.js"></script>
     <script src="app/services/ProductService.js"></script>
     <script src="app/controllers/ProductListController.js"></script>
-    <script src="app/controllers/ProductCreateController.js"></script>
+    <script src="app/controllers/ProductCreateController.js"></script>,
+    <script src="app/controllers/ProductEditController.js"></script>
+    <script src="app/controllers/StockActionController.js"></script>
 </body>
 
 </html>
