--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script src="app/services/ProductService.js"></script>
+    <script src="app/services/StockActionService.js"></script>
     <script src="app/controllers/ProductListController.js"></script>
     <script src="app/controllers/ProductCreateController.js"></script>,
     <script src="app/controllers/ProductEditController.js"></script>
