--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,7 @@
     <script src="app/controllers/ProductCreateController.js"></script>,
     <script src="app/controllers/ProductEditController.js"></script>
     <script src="app/controllers/StockActionController.js"></script>
+    <script src="app/controllers/ProductDeleteController.js"></script>
 </body>
 
 </html>
